@@ -42,7 +42,8 @@ FILE_OBJS=U7file.o Flex.o IFF.o Table.o Flat.o utils.o
 GUMPS_OBJS= Actor_gump.o  Book_gump.o  File_gump.o  Gump.o  Gump_button.o \
 	gump_utils.o  Gump_widget.o  misc_buttons.o  Paperdoll_gump.o  \
 	Paperdoll_gump_info.o Scroll_gump.o Sign_gump.o  Slider_gump.o \
-	Spellbook_gump.o Stats_gump.o Text_gump.o  Yesno_gump.o
+	Spellbook_gump.o Stats_gump.o Text_gump.o  Yesno_gump.o \
+	Gamemenu_gump.o
 IMAGEWIN_OBJS=imagebuf.o imagewin.o iwin8.o ibuf8.o ibuf16.o imagescl.o \
 	savepcx.o
 SHAPES_OBJS=bodies.o items.o shapeinf.o shapevga.o vgafile.o font.o fontvga.o
